Property/objects/Property_Enquiry__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property Enquiry</relationshipLabel>
        <relationshipName>Property_Enquiry</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Property Enquiry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Message__c</columns>
        <columns>Name__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Property Enquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Enquiry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>